Make the jdk_25 tests compile
Change-Id: I1da2cd62a2f83d26b8dfc5c502ee571c58c035fb